--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -7,10 +7,12 @@
     <title>TipTop</title>
 </head>
 <body>
-    Before
+    
     <br>
+    <%- include('../partials/header.ejs') %>
+    <%- include('../partials/errorMessage.ejs') %>
    <%- body %>
     <br>
-    after
+    
 </body>
 </html>
